[metadata]
name = modfire
version = attr: modfire.__version__
description = MODern Fast Image Retrieval
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fast-retrieval, hash, pytorch, computer-vision
license = Apache-2.0 License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA :: 11.0
    Environment :: GPU :: NVIDIA CUDA :: 11.1
    Environment :: GPU :: NVIDIA CUDA :: 11.2
    Environment :: GPU :: NVIDIA CUDA :: 11.3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
url = https://github.com/VL-Group/modfire
author = Xiaosu Zhu
author_email = xiaosu.zhu@outlook.com

[options]
include_package_data = True
packages = find:
zip_safe = True
python_requires = >=3.8,<3.9
install_requires =
    torch>=1.13,<2
    torchvision>=0.14,<1
    tensorboard>=2.11,<3
    rich<11
    pyyaml<7
    marshmallow<4
    click<9
    vlutils>=0.1.22
    packaging
    faiss>=1.7,<1.8
